    compressed) and parse tabix-indexed files

    o readBamGappedReads()

    o PileupFiles, PileupParam, applyPileup for visiting several BAM
    files and calculating pile-ups on each.

    o Provide a zlib for Windows, as R does not currently do this

    o BamFileList, BcfFileList, TabixFileList, FaFileList clases
    extend IRanges::SimpleList, for managings lists of file references 

BUG FIXES

    o scanBam (and readBamGappedAlignments) called with an invalid or
    character(0) index no longer segfaults.

    o scanBcfHeader parses values with embedded commas or =

    o scanFa returns correct sequences when file is compressed and
    file positions not accessed sequentially

CHANGES IN VERSION 1.4.0
------------------------

NEW FEATURES

    o BamFile class allows bam files to be open across calls to
    scanBam and friends. This can be helpful when wanting to avoid
    repeated loading of the index, for instance.

    o BcfFile, scanBcf, scanBcfHeader to parse bcftools' .vcf and .bcf
    files. Note that this implements bcftools notions of vcf and bcf,
    and are not fully compliant with vcf-4.0.

    o asBam converts SAM files to (indexed) BAM files

    o FaFile, indexFa, scanIndexFa, scanFa index and parse (indexed)
    fasta files.

BUG FIXES

    o scanBamFlag isValidVendorRead had reversed TRUE/FALSE logic

    o Attempts to read too many records caught more gracefully.

    o samtools output to fprintf() or calls to exit() are handled more
    gracefully

CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

    o Update to samtools 0.1.8

    o Update to samtools svn rev 750 (Mon, 27 Sep 2010)

    o sortBam sorts a BAM file

BUG FIXES

    o Attempts to parse non-existent local files now generate an error

    o Reads whose last nucleotide overlaps the first of a range are
    now scanned / counted.

    o scanning / counting reads late in large Windows files is fast

    o scanBam tag fields of type 'A' parsed correctly
